Started implementation of Property Chain concept for saving nested configuration properties.

--- a/SmartConf.UnitTest/SmartConf.UnitTest.csproj
+++ b/SmartConf.UnitTest/SmartConf.UnitTest.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Mocks\Config.cs" />
     <Compile Include="Mocks\DummyConfigurationSource.cs" />
     <Compile Include="MergeObjectsUnitTest.cs" />
+    <Compile Include="PropertyChainTests.cs" />
     <Compile Include="RuleBasedValidatorUnitTest.cs" />
     <Compile Include="SmartConfUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
