--- a/SmartConf/SmartConf.csproj
+++ b/SmartConf/SmartConf.csproj
@@ -45,6 +45,8 @@
     <Compile Include="IConfigurationSource.cs" />
     <Compile Include="MergeObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PropertyChain.cs" />
+    <Compile Include="ReflectionExtensions.cs" />
     <Compile Include="Sources\XmlStreamConfigurationSource.cs" />
     <Compile Include="Sources\XmlFileConfigurationSource.cs" />
     <Compile Include="Validation\IValidator.cs" />
